prod_snapshot_2015-09-24_1030/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <formula>HYPERLINK
     ( Job_Application__r.Candidate__r.Id ,  
      Job_Application__r.Candidate__r.First_Name__c   
      &amp;  
      &quot; &quot;  
     &amp;  
     Job_Application__r.Candidate__r.Last_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Job_Application__r.Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Enter a 1 - 5 rating of the candidate</inlineHelpText>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Scale_Rule</fullName>
        <active>true</active>
        <description>Rating must be from 1 to 5</description>
        <errorConditionFormula>(Rating__c  &lt; 1 || Rating__c  &gt; 5)</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Invalid Rating- rating must be from 1 to 5</errorMessage>
    </validationRules>
</CustomObject>